--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/server.tsx",
   "scripts": {
     "build": "esbuild --bundle src/client.tsx --outfile=public/static/client.js --minify && postcss ./src/input.css -o ./public/static/style.css",
-    "deploy": "wrangler publish src/server.tsx",
+    "deploy": "yarn build && NO_D1_WARNING=true wrangler publish",
     "dev": "yarn dev-css & yarn dev-js",
     "dev-js": "esbuild --bundle src/client.tsx --outfile=public/static/client.js && NO_D1_WARNING=true wrangler dev src/server.tsx --local --persist",
     "dev-css": "tailwindcss -i src/input.css -o public/static/style.css --watch"
