--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ebith <ebith.h@gmail.com>",
   "main": "src/server.tsx",
   "scripts": {
-    "build": "esbuild --bundle src/client.tsx --outfile=public/static/client.js --minify && postcss ./src/input.css -o ./public/static/style.css",
+    "build": "esbuild --bundle src/client.tsx --outfile=public/static/client.js --minify --target=ios15 && postcss ./src/input.css -o ./public/static/style.css",
     "deploy": "yarn build && NO_D1_WARNING=true wrangler deploy",
     "dev": "yarn dev-css & yarn dev-js",
     "dev-js": "esbuild --bundle src/client.tsx --outfile=public/static/client.js && NO_D1_WARNING=true wrangler dev src/server.tsx --local",
