--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "src/server.tsx",
   "scripts": {
     "build": "esbuild --bundle src/client.tsx --outfile=public/static/client.js --minify --target=ios15 && postcss ./src/input.css -o ./public/static/style.css",
-    "deploy": "yarn build && NO_D1_WARNING=true wrangler deploy",
-    "dev": "yarn dev-css & yarn dev-js",
+    "deploy": "pnpm build && NO_D1_WARNING=true wrangler deploy",
+    "dev": "pnpm dev-css & pnpm dev-js",
     "dev-js": "esbuild --bundle src/client.tsx --outfile=public/static/client.js && NO_D1_WARNING=true wrangler dev src/server.tsx --local",
     "dev-css": "tailwindcss -i src/input.css -o public/static/style.css --watch"
   },
