--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,6 @@ main = "src/server.tsx"
 compatibility_date = "2022-10-14"
 compatibility_flags = ["streams_enable_constructors"]
 
-[site]
-bucket = "./public"
-
 [[ d1_databases ]]
 binding = "DB"
 database_name = "atdym"
@@ -14,3 +11,6 @@ database_id = "0ab882db-69bb-4ece-8180-2312ae38f50f"
 
 [observability.logs]
 enabled = true
+
+[assets]
+directory = "./public"
